(executable
  (name pkvm_test)
  (public_name pkvm-test)
  (package pkvm-proxy)
  (modules pkvm_test pkvm_test_config)
  (preprocess (pps ppx_asm
                   ; -- --with-tc-prefix=aarch64-linux-gnu-
                   ))
  (libraries pkvm_proxy json logs.fmt fmt.tty))

(install
  (package pkvm-proxy)
  (files pkvm-test.json)
  (section share_root))

(env (release (link_flags (-ccopt -static))))
