(executable
  (name test_01)
  (public_name test-01)
  (package pkvm-proxy)
  (modules test_01 pkvm_test_config)
  (preprocess (pps ppx_asm
                   ; -- --with-tc-prefix=aarch64-linux-gnu-
                   ))
  (libraries pkvm_proxy json logs.fmt fmt.tty))

(install
  (package pkvm-proxy)
  (files pkvm-test.json)
  (section share_root))

(env (release (link_flags (-ccopt -static))))
