(executable
  (name test_01)
  (public_name test-01)
  (package pkvm-proxy)
  (preprocess (pps ppx_asm
                   ; -- --with-tc-prefix=aarch64-linux-gnu-
                   ))
  (libraries pkvm_proxy pkvm_testlib))

(install
  (package pkvm-proxy)
  (files pkvm-test.json)
  (section share_root))

(env (release (link_flags (-ccopt -static))))
