(executable
  (name test_01_basic)
  (public_name test-01-basic)
  (modules test_01_basic)
  (package pkvm-proxy)
  (preprocess (pps ppx_asm
                   ; -- --with-tc-prefix=aarch64-linux-gnu-
                   ))
  (libraries pkvm_proxy pkvm_testlib))

(executable
  (name test_02_par)
  (public_name test-02-par)
  (modules test_02_par)
  (package pkvm-proxy)
  (libraries pkvm_proxy pkvm_testlib))

(executable
  (name test_03_softerr)
  (public_name test-03-softerr)
  (modules test_03_softerr)
  (package pkvm-proxy)
  (libraries pkvm_proxy pkvm_testlib))

(env (release (link_flags (-ccopt -static))))
