(env (dev (flags (:standard -w -37)))) ; unused constructors

(library
  (name pkvm_proxy)
  (public_name pkvm-proxy)
  (synopsis "pKVM userspace proxy")
  (wrapped false)
  (foreign_stubs
    (language c)
    (names pkvm-proxy)
    (flags (:standard -Wall -Wextra -O3)))
  (libraries unix bigarray fmt logs))
